# example-module

./: .gitmodules  CMakeLists.txt  README.md
docs/: example_module.md  module_documentation_template.md
docs/uml/: button_state.puml
include/common/: example_module.hpp
python_client/: README.md  buttons.yaml  requirements.txt  run_buttons.py
python_client/button_logic/: ButtonLogic.py
source/common/: device_management.cpp  memory_management.cpp
source/external_server/: external_server.cpp
source/module_gateway/: module_manager.cpp
